# aoc

./: CMakeLists.txt  advent-skeleton.cpp  advent.h  aoc  charcount.c  day1.c  day12.cpp  day2-2.c  day2-b.c  day2.c  day4-2.cpp  day4.cpp  day8-2.cpp  day8-2b.cpp  day8.cpp  day9-2.cpp  day9.cpp  input4.txt
